--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "New, re-engineered version of the MusA server service, which collapses the existing MusA-Management and MusA-MapCreator solutions in a single one.",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --files src/index.ts",
     "start": "tsc && ts-node dist/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,15 +12,20 @@
   "author": "Matteo Seragiotto (matteo.seragiotto@studenti.unimi.it)",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "~8.0.1",
+    "bcryptjs": "~2.4.3",
     "dotenv": "~16.4.5",
     "fastify": "~4.28.1",
+    "fastify-bcrypt": "~1.0.1",
     "fastify-plugin": "~4.5.1",
+    "jsonwebtoken": "~9.0.2",
     "pg": "~8.12.0",
     "reflect-metadata": "~0.2.2",
     "typeorm": "~0.3.20",
     "typeorm-fastify-plugin": "~2.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "~2.4.6",
     "@types/node": "~20.14.10",
     "ts-node": "~10.9.2",
     "ts-node-dev": "~2.0.0",
