--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --files src/index.ts",
     "start": "tsc && ts-node dist/index.js",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
   "author": "Matteo Seragiotto (matteo.seragiotto@studenti.unimi.it)",
   "license": "ISC",
@@ -27,6 +28,11 @@
   "devDependencies": {
     "@types/bcryptjs": "~2.4.6",
     "@types/node": "~20.14.10",
+    "@typescript-eslint/eslint-plugin": "~7.18.0",
+    "@typescript-eslint/parser": "~7.18.0",
+    "eslint": "~8.57.1",
+    "eslint-config-airbnb-typescript": "~18.0.0",
+    "eslint-plugin-import": "~2.30.0",
     "ts-node": "~10.9.2",
     "ts-node-dev": "~2.0.0",
     "typescript": "~5.5.3"
